--- a/src/pages/finance/business-of-madrassa/honey-kalojira.astro
+++ b/src/pages/finance/business-of-madrassa/honey-kalojira.astro
@@ -27,7 +27,7 @@ import PageLayout from '@/layouts/PageLayout.astro';
         },
     ]}
 >
-    <div class="grid grid-cols-2 gap-4">
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:gap-6">
         <div>
             <Image
                 src={honeyKalojira}
