--- a/src/pages/study-materials/bengali/index.astro
+++ b/src/pages/study-materials/bengali/index.astro
@@ -28,7 +28,7 @@ const items = [
         },
     ]}
 >
-    <div class="grid grid-cols-3 gap-6">
+    <div class="grid grid-cols-1 gap-6 md:grid-cols-3">
         {
             items.map((item, index) => (
                 <LinkCard title={item.title} link={item.link} />
