--- a/src/pages/study-materials/bengali/know-and-learn-bengali-letters.astro
+++ b/src/pages/study-materials/bengali/know-and-learn-bengali-letters.astro
@@ -50,7 +50,7 @@ const items = links.find((item) => item.id === currentPath)?.data ?? [];
         এখানে: 01911-494547
     </Text>
 
-    <div class="mt-6 grid grid-cols-3 gap-6">
+    <div class="mt-6 grid grid-cols-1 gap-6 md:grid-cols-3">
         {
             items.map((item, index) => (
                 <LinkCard title={item.title} link={item.link} />
