--- a/src/components/HeroSection.astro
+++ b/src/components/HeroSection.astro
@@ -3,13 +3,11 @@ import Text from '@/components/Text.astro';
 import HeroSlider from '@/components/HeroSlider.tsx';
 ---
 
-<div class="grid grid-cols-12 items-center py-6 md:gap-6 md:py-16">
+<div class="grid grid-cols-12 items-center md:gap-6 md:py-16">
     <div
         class="col-span-12 flex h-full items-center justify-center py-4 md:hidden"
     >
-        <div class="h-auto w-[72vw]">
-            <Text>Hello</Text>
-        </div>
+        <HeroSlider client:visible />
     </div>
     <div class="col-span-12 md:col-span-7">
         <Text>
