--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -13,7 +13,7 @@ const { title, breadcrumbItems } = Astro.props;
 
 <BaseLayout meta={{ title }}>
     <PageHeader title={title} breadcrumbItems={breadcrumbItems} />
-    <div class="mx-auto max-w-3xl px-4 pt-6 pb-16 lg:px-0">
+    <div class="mx-auto max-w-3xl px-4 pt-4 pb-16 md:pt-6 lg:px-0">
         <slot />
     </div>
 </BaseLayout>
