--- a/src/pages/finance/business-of-madrassa/4d-block.astro
+++ b/src/pages/finance/business-of-madrassa/4d-block.astro
@@ -25,7 +25,7 @@ import PageLayout from '@/layouts/PageLayout.astro';
         },
     ]}
 >
-    <div class="grid grid-cols-2 gap-4">
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:gap-6">
         <div>
             <a href="/finance/business-of-madrassa/honey-boroi">
                 <Image
@@ -73,7 +73,7 @@ import PageLayout from '@/layouts/PageLayout.astro';
         >“ঠিক, এবার তাহলে ف, ي আর ل তিনটি হরফ এর লেজে-লেজে কানেকশন দিয়ে فيل
         বানাও তো।”</Text
     >
-    <div class="mt-6 text-center *:mx-auto *:rounded-md *:border-1">
+    <div class="mt-4 text-center *:mx-auto *:rounded-md *:border-1 md:mt-6">
         <YouTube id="p5BkpyPYprA" posterQuality="max" />
     </div>
     <Text variant="h5">মূল্য:</Text>
@@ -88,7 +88,7 @@ import PageLayout from '@/layouts/PageLayout.astro';
     <Text class={'font-bold'}>টাকা পাঠানোর জন্য:</Text>
     <ul
         role="list"
-        class="mt-6 *:mb-1.5 *:before:mr-1.5 *:before:content-[attr(data-icon)]"
+        class="mt-4 *:mb-1.5 *:before:mr-1.5 *:before:content-[attr(data-icon)] md:mt-6"
     >
         <li data-icon="✦">সরাসরি ডেলিভারি ম্যান এর কাছে</li>
         <li data-icon="✦">বা নগদ একাউন্টে 01911494547</li>
