--- a/src/pages/finance/business-of-madrassa/honey.astro
+++ b/src/pages/finance/business-of-madrassa/honey.astro
@@ -45,7 +45,7 @@ import PageLayout from '@/layouts/PageLayout.astro';
             <a href="/finance/business-of-madrassa/honey-boroi">
                 <Image
                     src={honeyBoroi}
-                    class="h-[400px] w-auto rounded-md border-1"
+                    class="h-[200px] w-auto rounded-md border-1 md:h-[400px]"
                     alt="honey-boroi"
                 />
             </a>
@@ -54,7 +54,7 @@ import PageLayout from '@/layouts/PageLayout.astro';
             <a href="/finance/business-of-madrassa/honey-kalojira">
                 <Image
                     src={honeyKalojira}
-                    class="h-[400px] w-auto rounded-md border-1"
+                    class="h-[200px] w-auto rounded-md border-1 md:h-[400px]"
                     alt="honey-kalojira"
                 />
             </a>
