--- a/src/pages/study-materials/arabic/arabic-letters-with-4-form-and-pictures.astro
+++ b/src/pages/study-materials/arabic/arabic-letters-with-4-form-and-pictures.astro
@@ -67,7 +67,7 @@ const items = [
             <Button>কায়দা মাক্কিয়াহ বই ডাউনলোড</Button>
         </a>
     </div>
-    <div class="mt-6 grid grid-cols-3 gap-6">
+    <div class="mt-6 grid grid-cols-1 gap-6 md:grid-cols-3">
         {
             items.map((item, index) => (
                 <LinkCard title={item.title} link={item.link} />
