--- a/src/pages/study-materials/index.astro
+++ b/src/pages/study-materials/index.astro
@@ -48,14 +48,10 @@ const items = [
         },
     ]}
 >
-    <div class="grid grid-cols-3 gap-6">
+    <div class="grid grid-cols-1 gap-4 md:grid-cols-3 md:gap-6">
         {
             items.map((item, index) => (
-                <LinkCard
-                    title={item.title}
-                    link={item.link}
-                    shouldCenter={index === items.length - 1}
-                />
+                <LinkCard title={item.title} link={item.link} />
             ))
         }
     </div>
