--- a/src/components/BookCard.astro
+++ b/src/components/BookCard.astro
@@ -32,7 +32,7 @@ const {
             <Image
                 src={`/images/${image}`}
                 class="h-full w-auto"
-                alt="বরই ফুলের মধু"
+                alt={name}
                 width="100"
                 height="100"
             />
