--- a/src/components/Head.astro
+++ b/src/components/Head.astro
@@ -10,10 +10,7 @@ const { title, description, createdAt, updatedAt } = Astro.props;
 const titleSeparator = '|';
 const siteTitle = `${title} ${titleSeparator} ${siteConfig.title}`;
 const canonicalURL = new URL(Astro.url.pathname, Astro.site || '');
-// const socialImageURL = new URL(
-//     ogImage ? ogImage : '/og-image/common.png',
-//     Astro.url
-// ).href;
+const socialImageURL = new URL('/images/seo.jpg', Astro.url).href;
 ---
 
 <meta charset="utf-8" />
@@ -26,7 +23,7 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site || '');
 
 <!-- Icons / Favicon -->
 <link rel="icon" href={`/favicon.ico`} sizes="any" />
-<link rel="manifest" href={`/manifest.webmanifest`} />
+<!-- <link rel="manifest" href={`/manifest.webmanifest`} /> -->
 <link rel="canonical" href={canonicalURL} />
 
 <!-- Primary Meta Tags -->
@@ -44,9 +41,9 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site || '');
 <meta property="og:url" content={canonicalURL} />
 <meta property="og:site_name" content={siteConfig.title} />
 <meta property="og:locale" content={siteConfig.ogLocale} />
-<!-- <meta property="og:image" content={socialImageURL} /> -->
-<meta property="og:image:width" content="1200" />
-<meta property="og:image:height" content="630" />
+<meta property="og:image" content={socialImageURL} />
+<meta property="og:image:width" content="1620" />
+<meta property="og:image:height" content="911" />
 {
     (
         <>
@@ -75,23 +72,11 @@ const canonicalURL = new URL(Astro.url.pathname, Astro.site || '');
 <meta property="twitter:url" content={canonicalURL} />
 <meta property="twitter:title" content={siteTitle} />
 <meta property="twitter:description" content={description} />
-<!-- <meta property="twitter:image" content={socialImageURL} /> -->
+<meta property="twitter:image" content={socialImageURL} />
 <meta
     name="google-site-verification"
     content="quWHhspqYXZPuOWrtY_MWfB0-g9RJ2MF3ceF1dUol0w"
 />
-
-<!-- Sitemap -->
-<!-- <link rel="sitemap" href={`/sitemap-index.xml}`} /> -->
-
-<!-- RSS auto-discovery -->
-
-<!-- <link
-    rel="alternate"
-    type="application/rss+xml"
-    title={siteConfig.title}
-    href={`/rss.xml`}
-/> -->
 
 <link
     rel="preload"
