--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,7 +5,7 @@ import HeroSection from '@/components/HeroSection.astro';
 import Text from '@/components/Text.astro';
 ---
 
-<BaseLayout meta={{ title: 'Home' }}>
+<BaseLayout meta={{ title: 'নীড়পাতা' }}>
     <ContainerLayout>
         <HeroSection />
         <Text variant="h3" class="text-center">পাঠ কার্যক্রম</Text>
