feat: add contents

--- a/src/pages/finance/business-of-madrassa/mustard-oil.astro
+++ b/src/pages/finance/business-of-madrassa/mustard-oil.astro
@@ -51,6 +51,7 @@ import PageLayout from '@/layouts/PageLayout.astro';
             <Text> - ২৫০ গ্রাম ৩০০ টাকা </Text>
             <Text> - ৫ লিটার ১০৫০ টাকা</Text>
             <Text class={'font-bold'}>সাথে ডেলিভারী চার্জ: 60~120 টাকা</Text>
+            <Text variant="h6">Call & Whatsapp for order: 01914-723676</Text>
         </div>
     </div>
 </PageLayout>
