--- a/src/pages/study-materials/quran-and-hadith/hadith-and-dua-collection.astro
+++ b/src/pages/study-materials/quran-and-hadith/hadith-and-dua-collection.astro
@@ -61,7 +61,7 @@ const items2 = [
         মুসলিম’ থেকে বাছাই করা দু’আ নিয়ে আমরা করেছি এই ‘হাদীস ও দু’আ সম্ভার’
         নামক সংকলনগুলো।
     </Text>
-    <div class="mt-6 grid grid-cols-2 gap-6">
+    <div class="mt-4 grid grid-cols-1 gap-4 md:mt-6 md:grid-cols-2 md:gap-6">
         {
             items.map((item, index) => (
                 <LinkCard
@@ -73,7 +73,7 @@ const items2 = [
         }
     </div>
     <Text variant="h3">উচ্চারণ</Text>
-    <div class="mt-6 grid grid-cols-2 gap-6">
+    <div class="mt-4 grid grid-cols-1 gap-4 md:mt-6 md:grid-cols-2 md:gap-6">
         {
             items2.map((item, index) => (
                 <LinkCard
