--- a/src/pages/finance/business-of-madrassa/honey-kalojira.astro
+++ b/src/pages/finance/business-of-madrassa/honey-kalojira.astro
@@ -51,6 +51,7 @@ import PageLayout from '@/layouts/PageLayout.astro';
             <Text variant="h5">মূল্য:</Text>
             <Text> - ৫০০ গ্রাম ৪০০ টাকা </Text>
             <Text class={'font-bold'}>সাথে ডেলিভারী চার্জ: 60~120 টাকা</Text>
+            <Text variant="h6">Call & Whatsapp for order: 01914-723676</Text>
         </div>
     </div>
 </PageLayout>
