--- a/src/pages/study-materials/quran-and-hadith/hadith-and-dua-collection.astro
+++ b/src/pages/study-materials/quran-and-hadith/hadith-and-dua-collection.astro
@@ -29,7 +29,7 @@ const items2 = [
     },
     {
         title: 'দু’আ সমূহের উচ্চারণ',
-        link: 'https://madrasatulilm.com/study-materials/arabic/quran-and-hadith/dua-audio',
+        link: 'https://drive.google.com/drive/folders/1emsfidzL2-jblt-lKdun_rIuyp7-aIdW?usp=sharing',
     },
 ];
 ---
