--- a/src/components/MobileNavbar.astro
+++ b/src/components/MobileNavbar.astro
@@ -9,7 +9,7 @@ const currentPath = Astro.url.pathname;
 ---
 
 <mobile-navbar class="lg:hidden">
-    <Button variant="outline" size="icon" data-open-menu>
+    <Button variant="ghost" size="icon" data-open-menu>
         <Menu className="h-[1.2rem] w-[1.2rem]" />
 
         <span class="sr-only">Open Menu</span>
