--- a/src/pages/study-materials/arabic/arabic-letters-with-4-form-and-pictures.astro
+++ b/src/pages/study-materials/arabic/arabic-letters-with-4-form-and-pictures.astro
@@ -42,6 +42,7 @@ const items = [
             isCurrentPage: true,
         },
     ]}
+    shouldIndex={true}
 >
     <Text class="pt-0">
         কুরআন পড়তে শেখাতে যে বইটি শুরুতেই শিশুর হাতে তুলে দিতে হয়, তা হচ্ছে,
