--- a/src/pages/study-materials/arabic/arabic-letters-with-examples.astro
+++ b/src/pages/study-materials/arabic/arabic-letters-with-examples.astro
@@ -25,6 +25,7 @@ import PageLayout from '@/layouts/PageLayout.astro';
             isCurrentPage: true,
         },
     ]}
+    shouldIndex={true}
 >
     <Text class="pt-0">
         আরবী বর্ণ বা হরফের সাথে শিশুর প্রথম পরিচয় হোক আনন্দঘন। হরফ শিখার সাথে
