--- a/src/pages/study-materials/arabic/learn-arabic-by-watching-pictures.astro
+++ b/src/pages/study-materials/arabic/learn-arabic-by-watching-pictures.astro
@@ -33,6 +33,7 @@ const items = links.find((item) => item.id === currentPath)?.data ?? [];
             isCurrentPage: true,
         },
     ]}
+    shouldIndex={true}
 >
     <Text class="pt-0">
         ছোটবেলায় আমরা মানব দেহ, ফল-ফুল, পশু-পাখি কত কিছুর নাম বাংলা আর ইংরেজীতে
