--- a/src/pages/study-materials/bengali/know-and-learn-bengali-letters.astro
+++ b/src/pages/study-materials/bengali/know-and-learn-bengali-letters.astro
@@ -33,6 +33,7 @@ const items = links.find((item) => item.id === currentPath)?.data ?? [];
             isCurrentPage: true,
         },
     ]}
+    shouldIndex={true}
 >
     <Text class="pt-0">
         শুধু বাংলা বর্ণমালার বই দিয়ে বাচ্চাদের বাংলা শিখানো ইদানিং খুব কষ্টসাধ্য
