--- a/src/pages/study-materials/mathematics/index.astro
+++ b/src/pages/study-materials/mathematics/index.astro
@@ -33,6 +33,7 @@ const items = [
             isCurrentPage: true,
         },
     ]}
+    shouldIndex={true}
 >
     <Text variant="h3" class={'pt-0 md:pt-0'}> গুণের নামতার কার্ড </Text>
     <Text>
