--- a/src/pages/study-materials/quran-and-hadith/hadith-and-dua-collection/index.astro
+++ b/src/pages/study-materials/quran-and-hadith/hadith-and-dua-collection/index.astro
@@ -55,6 +55,7 @@ const items2 = [
             isCurrentPage: true,
         },
     ]}
+    shouldIndex={true}
 >
     <Text class={'pt-0'}>
         ছোটদের জন্য সহজে মুখস্থ রাখা যায় এমন সহজ ও ছোট-ছোট হাদীস আর ‘হিসনুল
