--- a/src/pages/study-materials/quran-and-hadith/quran-and-tazweed/quran.astro
+++ b/src/pages/study-materials/quran-and-hadith/quran-and-tazweed/quran.astro
@@ -55,6 +55,7 @@ const items2 = [
             isCurrentPage: true,
         },
     ]}
+    shouldIndex={true}
 >
     <Text variant="h3" class={'pt-0 md:pt-0'}
         >কুর্‌আন মাশক (ক্বারী আব্দুল ক্বাদীর উসমান এর কণ্ঠে)</Text
