--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -7,6 +7,7 @@ import { siteConfig, type SiteMeta } from '@/config';
 
 interface Props {
     meta: SiteMeta;
+    shouldIndex?: boolean;
 }
 
 const {
@@ -17,7 +18,11 @@ const {
         createdAt,
         updatedAt,
     },
+    shouldIndex = false,
 } = Astro.props;
+
+const mainDataAttributes: DOMStringMap = {};
+if (shouldIndex) mainDataAttributes['data-pagefind-body'] = '';
 ---
 
 <script is:inline>
@@ -62,7 +67,11 @@ const {
         <!-- <ThemeProvider /> -->
         <!-- <SkipLink /> -->
         <Header />
-        <main id="main" class="min-h-[calc(100vh_-_200px)]">
+        <main
+            id="main"
+            class="min-h-[calc(100vh_-_200px)]"
+            {...mainDataAttributes}
+        >
             <slot />
         </main>
         <Footer />
