--- a/src/layouts/PageLayout.astro
+++ b/src/layouts/PageLayout.astro
@@ -6,12 +6,13 @@ import PageHeader from '@/components/PageHeader.astro';
 interface Props {
     title: string;
     breadcrumbItems: BreadcrumbItem[];
+    shouldIndex?: boolean;
 }
 
-const { title, breadcrumbItems } = Astro.props;
+const { title, breadcrumbItems, shouldIndex } = Astro.props;
 ---
 
-<BaseLayout meta={{ title }}>
+<BaseLayout meta={{ title }} shouldIndex={shouldIndex}>
     <PageHeader title={title} breadcrumbItems={breadcrumbItems} />
     <div class="mx-auto max-w-3xl px-4 pt-4 pb-16 md:pt-6 lg:px-0">
         <slot />
