--- a/src/pages/study-materials/quran-and-hadith/quran-and-tazweed/tazweed.astro
+++ b/src/pages/study-materials/quran-and-hadith/quran-and-tazweed/tazweed.astro
@@ -48,6 +48,7 @@ const items = [
             isCurrentPage: true,
         },
     ]}
+    shouldIndex={true}
 >
     <div class="grid grid-cols-1 gap-4 md:grid-cols-2 md:gap-6">
         {
