fix: search dialog position

--- a/src/components/Search.astro
+++ b/src/components/Search.astro
@@ -11,7 +11,7 @@ import { Button } from './ui/button';
     </Button>
     <dialog
         aria-label="search"
-        class="bg-background text-foreground relative mt-4 h-[72vh] max-h-full w-[84vw] max-w-full rounded-md border-1 shadow-md backdrop:backdrop-blur sm:mx-auto sm:mb-auto sm:h-max sm:max-h-[calc(100%-8rem)] sm:min-h-[15rem] sm:w-5/6 sm:max-w-[48rem] md:mt-6"
+        class="bg-background text-foreground relative mx-auto mt-4 h-[72vh] max-h-full w-[84vw] max-w-full rounded-md border-1 shadow-md backdrop:backdrop-blur md:mt-6"
     >
         <button
             data-close-modal
