--- a/src/pages/study-materials/arabic/qaidah-makkiah-audio.astro
+++ b/src/pages/study-materials/arabic/qaidah-makkiah-audio.astro
@@ -1,10 +1,11 @@
 ---
 import LinkCard from '@/components/LinkCard.astro';
 import PageLayout from '@/layouts/PageLayout.astro';
+import { getCurrentPath } from '@/lib/utils';
 import { getCollection } from 'astro:content';
 
 const links = await getCollection('links');
-const currentPath = Astro.url.pathname.split('/').pop();
+const currentPath = getCurrentPath(Astro.url.pathname);
 
 const audios = links.find((item) => item.id === currentPath)?.data ?? [];
 ---
