--- a/src/pages/study-materials/arabic/qaidah-makkiah-presentation.astro
+++ b/src/pages/study-materials/arabic/qaidah-makkiah-presentation.astro
@@ -2,9 +2,10 @@
 import { getCollection } from 'astro:content';
 import LinkCard from '@/components/LinkCard.astro';
 import PageLayout from '@/layouts/PageLayout.astro';
+import { getCurrentPath } from '@/lib/utils';
 
 const links = await getCollection('links');
-const currentPath = Astro.url.pathname.split('/').pop();
+const currentPath = getCurrentPath(Astro.url.pathname);
 
 const presentations = links.find((item) => item.id === currentPath)?.data ?? [];
 ---
