--- a/src/pages/study-materials/bengali/know-and-learn-bengali-letters.astro
+++ b/src/pages/study-materials/bengali/know-and-learn-bengali-letters.astro
@@ -3,11 +3,12 @@ import LinkCard from '@/components/LinkCard.astro';
 import Text from '@/components/Text.astro';
 import { Button } from '@/components/ui/button';
 import PageLayout from '@/layouts/PageLayout.astro';
+import { getCurrentPath } from '@/lib/utils';
 import { YouTube } from '@astro-community/astro-embed-youtube';
 import { getCollection } from 'astro:content';
 
 const links = await getCollection('links');
-const currentPath = Astro.url.pathname.split('/').pop();
+const currentPath = getCurrentPath(Astro.url.pathname);
 
 const items = links.find((item) => item.id === currentPath)?.data ?? [];
 ---
